--- a/pkg/crd/templates/webhook.tmpl
+++ b/pkg/crd/templates/webhook.tmpl
@@ -9,6 +9,12 @@ metadata:
     {{ $key }}: {{ $value }}
   {{- end }}
   {{- end }}
+  {{- if ne (len .Annotations) 0 }}
+  annotations:
+  {{- range $key, $value := .Annotations }}
+    {{ $key }}: {{ $value }}
+  {{- end }}
+  {{- end }}  
 spec:
   {{- if ne (len .Events) 0 }}
   events:
@@ -35,5 +41,48 @@ spec:
   headers:
   {{- range $key, $value := .Headers }}
     {{ $key }}: {{ $value }}
+  {{- end }}
+  {{- if .Disabled }}
+  disabled: {{ .Disabled }}
+  {{- end }}
+  {{- if ne (len .Config) 0 }}
+  config:
+  {{- range $key, $value := .Config }}
+    {{ $key }}:
+    {{- if $value.Public }}
+      public: {{ $value.Public.Value }}
+    {{- end }}
+    {{- if $value.Private }}
+      private:
+        namespace: {{ $value.Private.Namespace }}
+        name: {{ $value.Private.Name }}
+        key: {{ $value.Private.Key }}
+    {{- end }}
+  {{- end }}
+  {{- end }}
+  {{- if ne (len .Parameters) 0 }}
+  parameters:
+  {{- range $key, $value := .Parameters }}
+    {{ $key }}:
+    {{- if $value.Description }}
+      description: {{ $value.Description }}
+    {{- end }}
+    {{- if $value.Required }}
+      required: {{ $value.Required }}
+    {{- end }}
+    {{- if $value.Example }}
+      example: {{ $value.Example }}
+    {{- end }}
+    {{- if $value.Default_ }}
+      default: {{ $value.Default_.Value }}
+    {{- end }}
+    {{- if $value.Pattern }}
+      pattern: {{ $value.Pattern }}
+    {{- end }}
+  {{- end }}
+  {{- end }}
+  {{- if .WebhookTemplateRef }}
+  webhookTemplateRef:
+    name: {{ .WebhookTemplateRef.Name }}
   {{- end }}
   {{- end }}
