fix: add is template field
Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

--- a/pkg/crd/templates/webhook.tmpl
+++ b/pkg/crd/templates/webhook.tmpl
@@ -85,4 +85,7 @@ spec:
   webhookTemplateRef:
     name: {{ .WebhookTemplateRef.Name }}
   {{- end }}
+  {{- if .IsTemplate }}
+  isTemplate: {{ .IsTemplate }}
+  {{- end }}
   {{- end }}
