feat: webhook template cli and api
Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

--- a/pkg/crd/templates/webhooktemplate.tmpl
+++ b/pkg/crd/templates/webhooktemplate.tmpl
@@ -1,5 +1,5 @@
 apiVersion: executor.testkube.io/v1
-kind: Webhook
+kind: WebhookTemplate
 metadata:
   name: {{ .Name }}
   namespace: {{ .Namespace }}
@@ -82,8 +82,3 @@ spec:
     {{- end }}
   {{- end }}
   {{- end }}
-  {{- if .WebhookTemplateRef }}
-  webhookTemplateRef:
-    name: {{ .WebhookTemplateRef.Name }}
-  {{- end }}
-
