feat: [TKC-2933] add webhook config (#6100)
* feat: add webhook config

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: use boxed value

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: change description

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: tune confg model

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: mapping new webhook fields

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: update webhook cli

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: merge web hooks

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: pass config to template

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: merge events

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: prepare config data

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: check var

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: add is template field

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: rename fields

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: template

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* feat: webhook template cli and api

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: unit test

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: remove duplicated code

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: remove break

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: hints

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: use quote method

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: add template unit test

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: use list parameters

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: template

Signed-off-by: Vladislav Sukhin

--- a/pkg/crd/templates/webhooktemplate.tmpl
+++ b/pkg/crd/templates/webhooktemplate.tmpl
@@ -1,5 +1,5 @@
 apiVersion: executor.testkube.io/v1
-kind: Webhook
+kind: WebhookTemplate
 metadata:
   name: {{ .Name }}
   namespace: {{ .Namespace }}
@@ -81,8 +81,4 @@ spec:
       pattern: {{ $parameter.Pattern }}
     {{- end }}
   {{- end }}
-  {{- end }}
-  {{- if .WebhookTemplateRef }}
-  webhookTemplateRef:
-    name: {{ .WebhookTemplateRef.Name }}
   {{- end }}
