feat: add targets to triggers

--- a/pkg/crd/templates/testtrigger.tmpl
+++ b/pkg/crd/templates/testtrigger.tmpl
@@ -138,6 +138,24 @@ spec:
         {{- end }}
     {{- end }}
   {{- end }}
+  {{- if .Target }}
+  target:
+    {{- if .Target.Match }}
+    match:
+      {{- range $key, $value := .Target.Match }}
+      {{ $key }}: {{ $value }}
+      {{- end }}
+    {{- end }}
+    {{- if .Target.Not }}
+    not:
+      {{- range $key, $value := .Target.Not }}
+      {{ $key }}: {{ $value }}
+      {{- end }}
+    {{- end }}
+    {{- if .Target.Replicate }}
+    replicate: {{ .Target.Replicate }}
+    {{- end }}
+  {{- end}}
   {{- if .Disabled }}
   disabled: {{ .Disabled }}
   {{- end }}
