feat: alllow junit reports
Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

--- a/pkg/crd/templates/webhook.tmpl
+++ b/pkg/crd/templates/webhook.tmpl
@@ -86,3 +86,6 @@ spec:
   {{- if .PayloadTemplate }}
   {{ .PayloadTemplate }}
   {{- end }}
+  {{- if .AttachJunitSummary }}
+  attachJunitSummary: {{ .AttachJunitSummary }}
+  {{- end }}
