--- a/pkg/crd/templates/webhooktemplate.tmpl
+++ b/pkg/crd/templates/webhooktemplate.tmpl
@@ -82,3 +82,6 @@ spec:
     {{- end }}
   {{- end }}
   {{- end }}
+  {{- if .AttachJunitSummary }}
+  attachJunitSummary: {{ .AttachJunitSummary }}
+  {{- end }}
