--- a/pkg/crd/templates/testtrigger.tmpl
+++ b/pkg/crd/templates/testtrigger.tmpl
@@ -30,7 +30,7 @@ spec:
   {{- if .Resource }}
   resource: {{ .Resource }}
   {{- end }}
-  {{- if or .ResourceSelector.Name .ResourceSelector.NameRegex .ResourceSelector.Namespace (and .ResourceSelector.LabelSelector (or (not (empty .ResourceSelector.LabelSelector.MatchLabels)) (not (empty .ResourceSelector.LabelSelector.MatchExpressions)))) }}
+  {{- if or .ResourceSelector.Name .ResourceSelector.NameRegex .ResourceSelector.Namespace (and .ResourceSelector.LabelSelector (or .ResourceSelector.LabelSelector.MatchLabels ResourceSelector.LabelSelector.MatchExpressions)) }}
   resourceSelector:
     {{- if .ResourceSelector.Name }}
     name: {{ .ResourceSelector.Name }}
@@ -41,7 +41,7 @@ spec:
     {{- if .ResourceSelector.Namespace }}
     namespace: {{ .ResourceSelector.Namespace }}
     {{- end }}
-    {{- if and .ResourceSelector.LabelSelector (or (not (empty .ResourceSelector.LabelSelector.MatchLabels)) (not (empty .ResourceSelector.LabelSelector.MatchExpressions))) }}
+    {{- if and .ResourceSelector.LabelSelector (or .ResourceSelector.LabelSelector.MatchLabels .ResourceSelector.LabelSelector.MatchExpressions) }}
     labelSelector:
         {{- if .ResourceSelector.LabelSelector.MatchLabels }}
         matchLabels:
