--- a/pkg/crd/templates/webhook.tmpl
+++ b/pkg/crd/templates/webhook.tmpl
@@ -79,6 +79,33 @@ spec:
     {{- end }}
   {{- end }}
   {{- end }}
+  {{- if .Target }}
+  target:
+    {{- if .Target.Match }}
+    match:
+      {{- range $key, $value := .Target.Match }}
+      {{ $key }}:
+        {{- range $value }}
+        - {{ . }}
+        {{- end }}
+      {{- end }}
+    {{- end }}
+    {{- if .Target.Not }}
+    not:
+      {{- range $key, $value := .Target.Not }}
+      {{ $key }}:
+        {{- range $value }}
+        - {{ . }}
+        {{- end }}
+      {{- end }}
+    {{- end }}
+    {{- if .Target.Replicate }}
+    replicate:
+      {{- range .Target.Replicate }}
+      - {{ . }}
+      {{- end }}
+    {{- end }}
+  {{- end }}
   {{- if .WebhookTemplateRef }}
   webhookTemplateRef:
     name: {{ .WebhookTemplateRef.Name }}
